soul points first page done

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -164,6 +164,7 @@ div.tooltip.badge-tooltip {
             padding: 0;
             background: #2c0e00;
             font-size: 1rem;
+            border-bottom: 1px solid #ddab76;
             li {
                 display: inline-block;
                 font-variant: small-caps;
