--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -8,23 +8,31 @@
     <div class="row">
         <div class="cell rw-12 seasonHeader">
             <span class="seasonName">
-                {% if currentSeason is not null %}
-                {{ ('Saison ' ~ currentSeason.number ~ '.' ~ currentSeason.subNumber)|trans({}, "season")}}
+                {% if currentSeason is not null and currentSeason != "all" %}
+                    {{ ('Saison ' ~ currentSeason.number ~ '.' ~ currentSeason.subNumber)|trans({}, "season")}}
                 {% else %}
-                    {{'Alte Städte'|trans({}, "soul")}}
+                    {% if soloType is defined %}
+                    
+                    {% else %}
+                        {{'Alte Städte'|trans({}, "soul")}}
+                    {% endif %}
                 {% endif %}
             </span>
             <span class="seasonNumber">
-                {% if currentSeason is not null %}
-                    {% if currentSeason.subNumber > 0 %}
-                        {% set curNumber = currentSeason.number ~ '.' ~ currentSeason.subNumber %}
-                    {% else %}
-                        {% set curNumber = currentSeason.number %}
-                    {% endif %}
+                {% if soloType is defined %}
+                    {{'ALLE SAISONS'|trans({}, "soul")}}
                 {% else %}
-                    {% set curNumber = 0 %}
+                    {% if currentSeason is not null %}
+                        {% if currentSeason.subNumber > 0 %}
+                            {% set curNumber = currentSeason.number ~ '.' ~ currentSeason.subNumber %}
+                        {% else %}
+                            {% set curNumber = currentSeason.number %}
+                        {% endif %}
+                    {% else %}
+                        {% set curNumber = 0 %}
+                    {% endif %}
+                        {{ 'Saison %number%'|trans({"%number%": '<span class="number">' ~ curNumber ~ '</span>'}, "soul")|raw}}
                 {% endif %}
-                {{ 'Saison %number%'|trans({"%number%": '<span class="number">' ~ curNumber ~ '</span>'}, "soul")|raw}}
             </span>
         </div>
     </div>
@@ -33,9 +41,9 @@
         <div class="cell rw-12">
             <ul class="type-list">
                 {% for type in townTypes %}
-                    <li x-ajax-sticky x-ajax-href="{{ path('soul_season', {'type': type.id}) }}" class="type {% if currentType and type.id == currentType.id %}selected{% endif %}" x-type-id="{{ type.id }}"><img src="{{ asset('build/images/towntypes/' ~ type.name ~ '.gif') }}" alt="" /> <span class="link">{{ type.label|trans({}, 'game') }}</span></li>
+                    <li x-ajax-sticky x-ajax-href="{{ path('soul_season', {'type': type.id}) }}" class="type {% if currentType and type.id == currentType.id %}selected{% endif %}" x-type-id="{{ type.id }}"><img src="{%if type.name == 'remote' %}{{ asset('build/images/pictos/r_surlst.gif') }}{% else %}{{ asset('build/images/towntypes/' ~ type.name ~ '.gif') }}{% endif %}" alt="" /> <span class="link soul_season_link">{{ type.label|trans({}, 'soul') }}</span></li>
                 {% endfor %}
-                <li x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {'type': 'soul'}) }}" class="type {% if soloType is defined and soloType == 'soul' %}selected{% endif %}" x-type-id="soul"><img src="{{ asset('build/images/pictos/r_ptame.gif') }}" alt="" /> <span class="link">{{ 'Points d\'âme'|trans({}, 'soul') }}</span></li>
+                <li x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {'type': 'soul'}) }}" class="type {% if soloType is defined and soloType == 'soul' %}selected{% endif %}" x-type-id="soul"><img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="" /> <span class="link soul_season_link">{{ 'Seelenpunkte'|trans({}, 'soul') }}</span></li>
             </ul>
         </div>
         {% if currentType %}
@@ -130,10 +138,10 @@
                         {{'Pos.'|trans({}, 'soul')}}
                     </div>
                     <div class="cell padded rw-6 center">
-                        {{'Joueur'|trans({}, 'game')}}
+                        {{'Spieler'|trans({}, 'soul')}}
                     </div>
                     <div class="cell padded rw-4 center">
-                        {{'Points d\'âme'|trans({}, 'soul')}}
+                        {{'Seelenpunkte'|trans({}, 'soul')}}
                     </div>
                 </div>
                 <div class="town-container">
@@ -149,7 +157,7 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                    <div class="note note-critical">{{ 'Aucun joueur ne figure au classement!'|trans({},'global') }}</div>
+                    <div class="note note-critical">Aucun joueur ne figure au classement!</div> <!-- TODO: missing translation -->
                 {% endif %}
             </div>
         {% endif %}
@@ -214,6 +222,14 @@
 .top5plus > .soul_season_flag > img {
     width: 23px;
     height: 18px;
+}
+
+.soul_season_link {
+    text-decoration: none !important;
+    font-size: 120%;
+    padding-top: 5px;
+    color: #ddab76;
+    font-weight: bold;
 }
 
 .soul_season_name {
