--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -149,7 +149,7 @@
                     {% for player in ranking %}
                         {% set pos = pos + 1 %}
                         <div class="row-flex stretch season_entry_solo{% if player.id == user.id %} played{% endif %}{% if pos <= 5 %} top5{% else %} top5plus{% endif %}">
-                            <div class="cell rw-1 season_entry_td center soul_season_flag"><img src="{{ asset("build/images/lang/" ~ user.language ~".png") }}" alt="{{ user.language }}" /></div>
+                            <div class="cell rw-1 season_entry_td center soul_season_flag"><img src="{% if player.language %} {{ asset("build/images/lang/" ~ player.language ~".png") }} {% else %} {{ asset("build/images/lang/multi.png") }} {% endif %}" alt="{{ user.language }}" /></div>
                             <div class="cell rw-1 season_entry_td center">{{ pos }}</div>
                             <div class="cell rw-6 season_entry_td left soul_season_name"><a class="link" href="{{ path('soul_visit', {id: player.id}) }}">{{ player.name }}</a></div>
                             <div class="cell rw-4 season_entry_td center soul_season_points">{{ player.soulPoints }}</div>
