--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -128,6 +128,18 @@
             </div>
         {% endif %}
         {% if soloType is defined %}
+            <div class="cell rw-12">
+                <div class="row season_access_text">{{'Zugriff auf die Rangliste einer bestimmten Saison:'|trans({}, 'soul')}}</div>
+                <div class="row season_access_select">
+                    <div class="cell rw-4">
+                        <select name="season" id="season">
+                            <option value="null">{{'Alle Saisons'|trans({}, "soul")}}</option>
+                        </select>
+                    </div>
+                    <div class="cell rw-8">
+                    </div>
+                </div>
+            </div>
             <div class="cell padded rw-12">
                 {% if ranking|length > 0 %}
                 <div class="row-flex header">
@@ -183,6 +195,16 @@
     </div>
     {% endif %}
 <style>
+.season_access_text {
+    margin-top: 20px;
+    margin-left: 8px;
+    font-size: 85%;
+}
+
+.season_access_select {
+    margin-left: 10px;
+}
+
 .citizen-list {
     margin: 0;
     padding: 0;
