Added background color for username (based on Hordes Elements colors)

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -384,6 +384,21 @@ ul.coa-users {
         font-size: 0.8em; line-height: 0.9em;
         &.my-entry { background: #3b3249 }
         & span { font-size: 0.7em; i { color: #ddab76 } }
+        & br { 
+            content: "";
+            display: block;
+            margin-bottom: 0.3em;
+        }
+        .username { 
+            text-decoration: none;
+            background-color: #5C0000 !important;
+            border-top: 1px solid #98341c !important;
+            border-radius: 4px !important;
+            padding-right: 5px !important;
+            padding-left: 5px !important;
+            color: #f0d79e !important;
+            font-weight: bold !important;
+        }
     }
 
 }
