--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -57,8 +57,16 @@
 
   span.quoteauthor {
     font-weight: bold;
-    margin-left: 40px;
-    font-size: 1.25rem;
+    margin-left: 30px;
+    font-size: 1.25rem; 
+    text-decoration: none;
+    background-color: #5C0000 !important;
+    border-top: 1px solid #98341c !important;
+    border-radius: 4px !important;
+    padding-right: 5px !important;
+    padding-left: 5px !important;
+    color: #f0d79e !important;
+    font-weight: bold !important;
     + blockquote {
       margin-top: 0;
     }
