--- a/templates/ajax/soul/shell.html.twig
+++ b/templates/ajax/soul/shell.html.twig
@@ -13,7 +13,7 @@
                             <div class="avatar small ua-{{ app.user.id % 10 }}"><img alt="" src="{{ path('app_web_avatar', {'uid': app.user.id, 'name': app.user.avatar.smallName, 'ext': app.user.avatar.format}) }}"></div>
                         {% endif %}
                         <h4 class="soul-name">
-                            <img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="{{'Held'|trans({}, 'game')}}" /> {{ app.user.name }}
+                            <img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="{{'Held'|trans({}, 'game')}}" /> <a class="username">{{ app.user.name }}</a> 
                         </h4>
                     </div>
                     <div class="tab tab-floater">
