Added HELP button for Score in ranking tab

--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -53,7 +53,7 @@
                     {{'Überlebte Tage'|trans({}, 'soul')}}
                 </div>
                 <div class="cell padded rw-2 center">
-                    {{'Score'|trans({}, 'soul')}}
+                    {{'Score'|trans({}, 'soul')}} <a class="help-button"><div class="tooltip help">{{ 'Dieser Zahl ist die Summe der überlebten Tagen aller Bürger in einer Stadt. Sie ist der Gradmesser für die Koordinations- und Kooperationsfähigkeit einer Stadt.'|trans({},'global') }}</div>{{ 'Hilfe'|trans({},'global') }}</a>
                 </div>
             </div>
             <div class="town-container">
