Added locked info header to a locked thread

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -785,3 +785,10 @@ ul.subscriptions {
     border-top: 1px solid fade(@myhordes-smalltext, 50%); border-bottom: 1px solid fade(@myhordes-smalltext, 50%);
   }
 }
+
+.infoThread {  
+  background-color: #5C0000 !important;
+  border: 1px solid #ddab76 !important;
+  outline: 2px solid #5c2b20 !important;
+  margin-bottom: 10px;
+}
