--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -401,5 +401,52 @@ ul.coa-users {
             font-weight: bold !important;
         }
     }
-
 }
+
+.season_access_text {
+  margin-top: 20px;
+  margin-left: 8px;
+  font-size: 85%;
+}
+
+.season_access_select {
+  margin-left: 10px;
+}
+
+.citizen-list {
+  margin: 0; padding: 0;
+  &>li {
+    font-size: 1.2rem; font-weight: bold;
+    &>img {vertical-align: middle;}
+  }
+}
+
+.season_entry_td { border-right: 1px solid #7e4d2a; border-bottom: 1px solid #7e4d2a; }
+
+.season_entry_container { border-bottom: 1px solid #7e4d2a; }
+
+.season_entry_solo.top5 { max-height: 25px; }
+.season_entry_solo.top5plus { max-height: 18px; }
+
+.soul_season_flag { overflow-y: hidden; overflow-x: hidden;}
+
+.soul_season_name { padding-left: 5px; }
+.season_entry_solo { font-size: 80%; }
+
+.top5 {
+  &>.soul_season_flag > img { width: 32px; height: 25px; }
+  &>.soul_season_name { font-size: 120%; }
+  &>.soul_season_points {
+    font-size: 150%; /* on hordes, normal is 10pt and major 14pt */
+  }
+}
+
+.top5plus > .soul_season_flag > img {
+  width: 23px; height: 18px;
+}
+
+.soul_season_link {
+  text-decoration: none !important;
+  font-size: 120%; padding-top: 5px; color: #ddab76; font-weight: bold;
+}
+
