--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -521,13 +521,18 @@ div.town-banner {
   border-left: 1px solid #7e4d2a; border-bottom: 1px solid #7e4d2a; overflow: hidden; text-overflow: ellipsis;
   .username { 
     text-decoration: none;
-    background-color: #5C0000 !important;
-    border-top: 1px solid #98341c !important;
-    border-radius: 4px !important;
-    padding-right: 5px !important;
-    padding-left: 5px !important;
-    color: #f0d79e !important;
-    font-weight: bold !important;
+    background-color: #5C0000;
+    border-top: 1px solid #98341c;
+    border-radius: 4px;
+    padding-right: 5px;
+    padding-left: 5px;
+    color: #f0d79e;
+    font-weight: bold;
+    box-shadow: 0px 0px 1px black;
+    &:hover {
+      border-top: 1px solid #490000;
+      box-shadow: inset 0px 1px 2px rgba(0,0,0,0.5), 0px 0px 1px black;
+    }
   }
 }
 
