--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -529,9 +529,15 @@ div.town-banner {
     color: #f0d79e;
     font-weight: bold;
     box-shadow: 0px 0px 1px black;
+
     &:hover {
       border-top: 1px solid #490000;
       box-shadow: inset 0px 1px 2px rgba(0,0,0,0.5), 0px 0px 1px black;
+    }
+
+    &.friend {
+      border-top: 1px solid #6C7188;
+      background-color: #4e5162;
     }
   }
 }
