improve desert and translations

--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -18,7 +18,7 @@
       }
       &>span.log-part-content {
         &>span { 
-          color: white; font-weight: bold; &>img { vertical-align: text-top }
+          color: white; font-weight: bold; font-variant: small-caps; &>img { vertical-align: text-top }
           &.tool {
             padding-left: 3px;
             padding-right: 3px;
@@ -63,7 +63,7 @@
         text-align: center;
         border-bottom: 1px solid @myhordes-input-border; border-left: 1px solid @myhordes-input-border;
         border-right: 1px solid @myhordes-input-border; position: relative; padding: 3px; top: -3px; left: 5px;
-        &>span { font-weight: bold }
+        &>span { font-weight: bold; font-variant: small-caps; }
         &>*:not(span) {
           color: @myhordes-smalltext; cursor: pointer; display: inline-block;
           &:first-child { margin: 0 10px 0 0; }
@@ -97,7 +97,7 @@
       }
       &>span.shout-part-content {
         &>span {
-          color: white; font-weight: bold; &>img { vertical-align: text-top }
+          color: white; font-weight: bold; font-variant: small-caps; &>img { vertical-align: text-top }
           &.tool {
             padding-left: 3px;
             padding-right: 3px;
