--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -120,7 +120,7 @@
                             {% if not permission.only_mod_access %}
                                 <div x-forum-action="search" class="forum-button"><img alt="" src="{{ asset('build/images/forum/search.png') }}" /><div class="tooltip forum-tooltip">{{ 'Nachrichten suchen'|trans({},'global') }}</div></div>
                             {% endif %}
-                            {% if is_granted("ROLE_FORUM_BANNED") or not permission.create_thread() %}
+                            {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionForum')) or not permission.create_thread() %}
                                 <div class="forum-button-disabled" id="banned">{{ 'Neues Thema'|trans({},'global') }}</div>
                             {% else %}
                                 <div x-forum-action="new" class="forum-button" id="new-thread-button"><span>{{ 'Neues Thema'|trans({},'global') }}</span></div>
@@ -199,7 +199,7 @@
             return editor;
         }
 
-        {% if not is_granted("ROLE_FORUM_BANNED") and permission.create_thread() %}
+        {% if not app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionForum')) and permission.create_thread() %}
             $.html.addEventListenerAll('[x-forum-action=new]', 'click', function() {
                 $.html.forEach('[x-thread-id]', element => element.classList.remove('selected'))
                 let viewer = document.getElementById('forum-content');
