--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -176,19 +176,21 @@
                     <span class="hide-lg hide-md hide-sm">{{ 'Archiv'|trans({},'game') }}</span>
                 </div>
             </li>
-            <li class="tab" x-tab-id="write" id="new_pm_tab">
-                <div class="tab-link">
-                    <img src="{{ asset("build/images/icons/small_mail.gif") }}" alt="" />
-                    <span class="hide-lg hide-md hide-sm">{{ 'Eine Nachricht schreiben'|trans({},'game') }}</span>
-                </div>
-            </li>
-            {% if can_send_global_pm %}
-                <li class="tab" x-tab-id="write-to-all" id="new_global_pm_tab">
+            {% if not app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionTownCommunication')) %}
+                <li class="tab" x-tab-id="write" id="new_pm_tab">
                     <div class="tab-link">
-                        <img src="{{ asset("build/images/icons/star.gif") }}" alt="" />
-                        <span class="hide-lg hide-md hide-sm">{{ 'Schreiben Sie an alle'|trans({},'game') }}</span>
+                        <img src="{{ asset("build/images/icons/small_mail.gif") }}" alt="" />
+                        <span class="hide-lg hide-md hide-sm">{{ 'Eine Nachricht schreiben'|trans({},'game') }}</span>
                     </div>
                 </li>
+                {% if can_send_global_pm %}
+                    <li class="tab" x-tab-id="write-to-all" id="new_global_pm_tab">
+                        <div class="tab-link">
+                            <img src="{{ asset("build/images/icons/star.gif") }}" alt="" />
+                            <span class="hide-lg hide-md hide-sm">{{ 'Schreiben Sie an alle'|trans({},'game') }}</span>
+                        </div>
+                    </li>
+                {% endif %}
             {% endif %}
         </ul>
         <div x-tab-group="home-messages" x-tab-id="received" x-tab-target>
@@ -246,7 +248,8 @@
             {% endif %}
             </div>
         </div>
-        <div x-tab-group="home-messages" x-tab-id="write" x-tab-target>
+        {% if not app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionTownCommunication')) %}
+            <div x-tab-group="home-messages" x-tab-id="write" x-tab-target>
             <h5>{% trans from 'game'%}Neue Nachricht{% endtrans %}</h5>
             <div class="row">
                 <div class="cell padded rw-2"><span class="small">{% trans from 'game'%}Empfänger:{% endtrans %}</span></div>
@@ -307,10 +310,11 @@
                 </div>
             </div>
         </div>
-        {% if can_send_global_pm %}
-            <div x-tab-group="home-messages" x-tab-id="write-to-all" x-tab-target>
-                <h5>{% trans from 'game'%}Neue globale Nachricht{% endtrans %}</h5>
-            </div>
+            {% if can_send_global_pm %}
+                <div x-tab-group="home-messages" x-tab-id="write-to-all" x-tab-target>
+                    <h5>{% trans from 'game'%}Neue globale Nachricht{% endtrans %}</h5>
+                </div>
+            {% endif %}
         {% endif %}
         <div id="pm-forum-editor"></div>
         <div id="global-forum-editor"></div>
@@ -715,9 +719,9 @@
         {% endif %}
 
         {% if dest_citizen is not null %}
-        document.getElementById("pm-forum-editor").innerHTML = "";
-        document.getElementById("global-forum-editor").innerHTML = "";
-        $.ajax.no_history().load( document.getElementById('pm-forum-editor'), '{{ path('home_new_post_editor_controller', {type: 'pm'}) }}', false )
+            document.getElementById("pm-forum-editor").innerHTML = "";
+            document.getElementById("global-forum-editor").innerHTML = "";
+            $.ajax.no_history().load( document.getElementById('pm-forum-editor'), '{{ path('home_new_post_editor_controller', {type: 'pm'}) }}', false )
         {% endif %}
 
         let send_item_btn = document.getElementById("send-item-btn");
