--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -30,8 +30,8 @@
     {% if is_ghoul %}
         {% if caught_chance < 0.5 %}{% set chances = 'gering'|trans({}, 'game') %}{% else %}{% set chances = 'hoch'|trans({}, 'game') %}{% endif %}
     <div class="note warning">
-        <strong><img src="{{ asset('build/images/status/status_ghoul.gif') }}" alt="" />{{'Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...'|trans({'%chances%': chances}, 'game')}}</strong><br />
-        {{'Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.'|trans({}, 'game')}}
+        <strong><img src="{{ asset('build/images/status/status_ghoul.gif') }}" alt="" />{{'Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...'|trans({'%chances%': chances}, 'game')|raw }}</strong><br />
+        {{'Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.'|trans({}, 'game')|raw }}
     </div>
     {% endif %}
     <div class="row-table citizens-list">
