--- a/templates/ajax/admin/towns/townlist.html.twig
+++ b/templates/ajax/admin/towns/townlist.html.twig
@@ -2,7 +2,7 @@
     {% for town in towns %}
         <div class="towns-list-entry" x-town-id="{{ town.id }}" x-town-name="{{ town.name }}" x-admin-url="{{ url(target, {id: town.id}) }}">
             <div {% if not nohref %}x-ajax-href="{{ url(target, {id: town.id}) }}" x-ajax-target="#content"{% endif %}>
-                <span class="language"><img src="{{ asset("build/images/lang/" ~ town.language ~".png") }}" alt="{{ town.language }}" /></span> {{ town.name }}
+                <span class="language"><img src="{{ asset("build/images/lang/" ~ town.language ~".png") }}" alt="{{ town.language }}" /></span> {{ town.id }} : {{ town.name }}
             </div>
         </div>
     {% endfor %}
