--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -43,6 +43,14 @@
                     </div>
                     <div class="forum-post-content">
                         {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
+                        {% if not post.translate and paranoid and post.owner.name != 'Der Rabe' %}
+                            {% set mode = (app.user.id + post.id + post.owner.id) % 12 %}
+                            {% if mode == 0 %}
+                                <br/>{{ 'Hängt %user%!'|trans({'%user%': app.user.name},'game') }}
+                            {% elseif mode == 1 %}
+                                <br/>{{ '%user% wir kriegen dich!'|trans({'%user%': app.user.name},'game') }}
+                            {% endif %}
+                        {% endif %}
                     </div>
                 </div>
             {% endif %}
