--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -8,7 +8,7 @@
 {# @var forum \App\Entity\Forum #}
 {# @var permission \App\Structures\ForumPermissionAccessor #}
 
-{% macro display_thread_list( list, fid, icon, title, select, jump, permission, add_seperators = false ) %}
+{% macro display_thread_list( list, fid, icon, title, select, jump, permission, add_seperators = false, paranoid = false ) %}
     <div class="forum-note">
         <b><i class="fa {{ icon }}"></i> {{ title }}</b>
         {% set last_day = 'today'|to_date %}
@@ -44,7 +44,18 @@
                         {% if thread.translatable %}
                             {{ thread.title|trans({},'game') }}
                         {% else %}
-                            {{ thread.title }}
+                            {% if paranoid and thread.owner and thread.owner != app.user %}
+                                {% set mode = (app.user.id + thread.id + thread.owner.id) % 12 %}
+                                {% if mode == 0 %}
+                                    {{ 'Hängt %user%!'|trans({'%user%': app.user.name},'game') }}
+                                {% elseif mode == 1 %}
+                                    {{ '%user% wir kriegen dich!'|trans({'%user%': app.user.name},'game') }}
+                                {% else %}
+                                    {{ thread.title }}
+                                {% endif %}
+                            {% else %}
+                                {{ thread.title }}
+                            {% endif %}
                         {% endif %}
                         {% if permission.moderate and thread.reportedPosts %}
                             <span class="float-right">
@@ -150,7 +161,7 @@
                         <br />
                     {% endif %}
 
-                    {{ _self.display_thread_list(threads, forum.id, 'fa-scroll', forum.title, select, jump, permission, true) }}
+                    {{ _self.display_thread_list(threads, forum.id, 'fa-scroll', forum.title, select, jump, permission, true, paranoid) }}
                     {% if pages > 1 %}
                         <div class="row">
                             <div class="cell rw-12 padded center">
