--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -283,22 +283,42 @@
                             </div>
                         </div>
 
-                    <div class="row">
-                        <div class="cell padded rw-3 note note-lightest">
-                            <label>{{'Verfügbare Berufe'|trans({}, 'ghost')}}</label>
+                        <div class="row">
+                            <div class="cell padded rw-3 note note-lightest">
+                                <label>{{'Verfügbare Berufe'|trans({}, 'ghost')}}</label>
+                            </div>
+
+                            <div class="cell padded rw-9 mod">
+                                <div><input type="checkbox" x-payload="basic" name="basic" id="basic" checked/> <label for="basic"><strong>{{'Einwohner'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="collec" name="collec" id="collec" checked/> <label for="collec"><strong>{{'Buddler'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="guardian" name="guardian" id="guardian" checked/> <label for="guardian"><strong>{{'Wächter'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="hunter" name="hunter" id="hunter" checked/> <label for="hunter"><strong>{{'Aufklärer'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="tamer" name="tamer" id="tamer" checked/> <label for="tamer"><strong>{{'Dompteur'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="tech" name="tech" id="tech" checked/> <label for="tech"><strong>{{'Techniker'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="shaman" name="shaman" id="shaman"/> <label for="shaman"><strong>{{'Schamane'|trans({}, 'game')}}</strong></label></div>
+                                <div><input type="checkbox" x-payload="survivalist" name="survivalist" id="survivalist" checked/> <label for="survivalist"><strong>{{'Einsiedler'|trans({}, 'game')}}</strong></label></div>
+                            </div>
                         </div>
 
-                        <div class="cell padded rw-9 mod">
-                            <div><input type="checkbox" x-payload="basic" name="basic" id="basic" checked/> <label for="basic"><strong>{{'Einwohner'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="collec" name="collec" id="collec" checked/> <label for="collec"><strong>{{'Buddler'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="guardian" name="guardian" id="guardian" checked/> <label for="guardian"><strong>{{'Wächter'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="hunter" name="hunter" id="hunter" checked/> <label for="hunter"><strong>{{'Aufklärer'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="tamer" name="tamer" id="tamer" checked/> <label for="tamer"><strong>{{'Dompteur'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="tech" name="tech" id="tech" checked/> <label for="tech"><strong>{{'Techniker'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="shaman" name="shaman" id="shaman"/> <label for="shaman"><strong>{{'Schamane'|trans({}, 'game')}}</strong></label></div>
-                            <div><input type="checkbox" x-payload="survivalist" name="survivalist" id="survivalist" checked/> <label for="survivalist"><strong>{{'Einsiedler'|trans({}, 'game')}}</strong></label></div>
+                        <div class="row">
+                            <div class="cell padded rw-3 note note-lightest">
+                                <label>{{'Events'|trans({}, 'ghost')}}</label>
+                            </div>
+
+                            <div class="cell padded rw-9 mod">
+                                <div><input type="checkbox" x-payload="event-management" name="event-management" id="event-management"/> <label for="event-management"><strong>{{'Manuelles Event-Management:'|trans({}, 'game')}}</strong> {{'Deaktiviert die normale Event-Verwaltung der Stadt und legt stattdessen manuell fest, welche Event-Inhalte für die Dauer der Stadt verfügbar sind.'|trans({}, 'game')}}</label></div>
+                                <div id="event-list" style="display: none">
+                                    <div><input type="radio" value="none" x-payload="event-name" name="event-name" id="event-none" checked/> <label for="event-none"><strong>{{'Kein Event:'|trans({}, 'game')}}</strong> {{ 'Startet die Stadt ohne Event-Inhalte'|trans({}, 'game') }}</label></div>
+                                    <div><input type="radio" value="afools" x-payload="event-name" name="event-name" id="event-afools" /> <label for="event-afools"><strong>{{'1. April'|trans({}, 'game')}}</strong></label></div>
+                                    <div><input type="radio" value="stpatrick" x-payload="event-name" name="event-name" id="event-stpatrick" /> <label for="event-stpatrick"><strong>{{'St. Patrick'|trans({}, 'game')}}</strong></label></div>
+                                    <div><input type="radio" value="easter" x-payload="event-name" name="event-name" id="event-easter" /> <label for="event-easter"><strong>{{'Ostern'|trans({}, 'game')}}</strong></label></div>
+                                    <div><input type="radio" value="halloween" x-payload="event-name" name="event-name" id="event-halloween" /> <label for="event-halloween"><strong>{{'Halloween'|trans({}, 'game')}}</strong></label></div>
+                                    <div><input type="radio" value="arma" x-payload="event-name" name="event-name" id="event-arma" /> <label for="event-arma"><strong>{{'Armageddon'|trans({}, 'game')}}</strong></label></div>
+                                    <div><input type="radio" value="christmas" x-payload="event-name" name="event-name" id="event-christmas" /> <label for="event-christmas"><strong>{{'Weihnachten'|trans({}, 'game')}}</strong></label></div>
+                                </div>
+
+                            </div>
                         </div>
-                    </div>
                     {% endif %}
 
                     <div class="warning" id="negate_warning">
@@ -351,6 +371,11 @@
             if (w) w.style.display = elem.checked ? null : 'none';
         });
 
+        $.html.addEventListenerAll('#event-management', 'change', function(e,elem) {
+            let w = document.getElementById('event-list');
+            if (w) w.style.display = elem.checked ? null : 'none';
+        });
+
         {% if is_granted('ROLE_CROW') %}
             $.html.addEventListenerAll('#mapsize', 'change', function(e,elem) {
                 let w = document.getElementById('mapsize_e_parent');
@@ -368,7 +393,8 @@
 
             let payload = {};
 
-            $.html.forEach('input[type=checkbox][x-payload],input[type=radio][x-payload]', elem => payload[elem.getAttribute('x-payload')] = elem.checked );
+            $.html.forEach('input[type=checkbox][x-payload]', elem => payload[elem.getAttribute('x-payload')] = elem.checked );
+            $.html.forEach('input[type=radio][x-payload]', elem => { if (elem.checked) payload[elem.getAttribute('x-payload')] = elem.value; } );
             $.html.forEach('select[x-payload][multiple]>option:checked', elem => {
                 const xpayload = elem.parentElement.getAttribute('x-payload');
                 if (typeof payload[xpayload] === 'undefined') payload[xpayload] = [];
@@ -377,8 +403,8 @@
             $.html.forEach('input:not([type=checkbox]):not([type=radio])[x-payload],textarea[x-payload],select[x-payload]:not([multiple])', elem => payload[elem.getAttribute('x-payload')] = elem.value );
 
             $.ajax.send( '{{ path('ghost_process_create_town') }}', payload,
-                function () {
-                    $.ajax.load(null, '{{ path('game_jobs') }}', true);
+                function (data) {
+                    $.ajax.load(null, data.url, true);
             } );
         });
     </script>
